Fixed bugs: Changed service.OpenStates to use a URI instead of URL so that it will handle calls to bill properly. Changed Legislator.Member to use name instead of legislator field to match json/api file.
LoadBulkData udpates: changed Legislator.Role to use Committee as
object. When called from API then committee.id will be filled out. Same
for Committee.Member, uses Legislator object. When called from API then
the Committee.Member.Legislator will have fullname, id, and role filled
out. The LoadBulkData.LoadCurrentSession will call a PostProcess method
that will weave the objects together.